--- a/project/src/app/core/components/navbar/navbar.component.html
+++ b/project/src/app/core/components/navbar/navbar.component.html
@@ -1,3 +1,4 @@
+
 <nav class="navbar navbar-expand-lg navbar-dark primary-color">
   <a class="navbar-brand" href="#">SPM</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -13,7 +14,7 @@
         <a class="nav-link" routerLink="/products" routerLinkActive="active" ariaCurrentWhenActive="page">View Products</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link"  routerLink="edit" routerLinkActive="active" ariaCurrentWhenActive="page">Add Product</a>
+        <a class="nav-link" (click)="openAddForm()">Add Product</a>
       </li>
     </ul>
   </div>
