--- a/project/src/app/features/product-list/product-list.component.scss
+++ b/project/src/app/features/product-list/product-list.component.scss
@@ -15,27 +15,13 @@ $global-radius: 4px;
 	font-family: 'Helvetica', 'Helvetica Neue', 'Arial', sans-serif;;
 }
 
-
-// //SUPER BASIC PAGE STYLING
-// *,*:before,*:after{
-//   -webkit-box-sizing: border-box;
-//   -moz-box-sizing: border-box;
-//   box-sizing: border-box;
-// }
-// main {
-//   padding: 2em;  
-//   float: left;
-//   width: 100%;
-// }
-
-
-///BASIC TABLE STYLING
 table {
 	border-collapse: collapse;
 	
 	// float: left;
-    background-color: $primary_2;
+    background-color: $primary_3;
     background-size: cover;
+	opacity: 80;
     margin: auto;
     display:block;
     position:absolute;
@@ -48,7 +34,7 @@ table {
 		border-bottom: 3px solid $primary_1;
 		th {
 			padding: 0.35em 0 .35em;
-       font-weight: 400;
+       		font-weight: 400;
 			text-align: left;
 			@include heading-font-regular;
 			font-size: 1.25em;
@@ -275,5 +261,10 @@ table {
 #rwd-table-large {
 	@extend %responive-tables-large;
 	@include responive-tables-large('Heading Col 1', 'Heading Col 2', 'Heading Col 3','Heading Col 4');
+}
+#button{
+	width: 50%;
+	
+
 }
 
