--- a/project/src/app/module/product-manage-form/product-manage-form.component.html
+++ b/project/src/app/module/product-manage-form/product-manage-form.component.html
@@ -1,12 +1,12 @@
 <ng-template #content let-modal>
   <div class="modal-header">
       <h4 class="modal-title" id="modal-basic-title">{{pageTitle}}</h4>
-      <button type="button" #closebtn class="btn-close" aria-label="Close" (click)="modal.dismiss('Cross click')"></button>
+      <button type="button" #closebtn class="btn-close" aria-label="Close" 
+      (click)="modal.dismiss('Cross click')"></button>
   </div>
   <div class="modal-body">
       <form [formGroup]="productForm"
-      (ngSubmit)="saveProduct()"
-            >
+      (ngSubmit)="saveProduct()">
           <div class="mb-3">
               <label>Id</label>
               <div class="input-group">
@@ -58,17 +58,10 @@
           </div>
 
           <div class="mb-3">
-
-              <div class="input-group">
-                  <button  type="submit" class="btn btn-primary">Save</button>
-              </div></div>
+            <button  type="submit" class="btn btn-primary"
+            [disabled]="!productForm.valid">Save</button>
+          </div>
       </form>
   </div>
-  <div class="modal-footer">
-      <button style="display: none;" type="button" class="btn btn-outline-dark"
-          (click)="modal.close('Save click')">Save</button>
-  </div>
 </ng-template>
-
-<button class="btn btn-primary" #popupbtn id="popupbtn" (click)="open()">Add New</button>
 
