--- a/project/src/app/core/components/navbar/navbar.component.html
+++ b/project/src/app/core/components/navbar/navbar.component.html
@@ -14,7 +14,7 @@
         <a class="nav-link" routerLink="/products" routerLinkActive="active" ariaCurrentWhenActive="page">View Products</a>
       </li>
       <li class="nav-item">
-        <app-product-manage-form></app-product-manage-form>
+        <ng-container #manageFormContainerRef ></ng-container>
         <a class="nav-link" (click)="openAddForm()">Add Product</a>
       </li>
     </ul>
