--- a/project/src/app/module/product-manage-form/product-manage-form.component.html
+++ b/project/src/app/module/product-manage-form/product-manage-form.component.html
@@ -10,7 +10,7 @@
           <div class="mb-3">
               <label>Id</label>
               <div class="input-group">
-                  <input name="id" class="form-control" formControlName="productId">
+                  <input readonly name="id" class="form-control" formControlName="productId" >
               </div>
           </div>
           <div class="mb-3">
@@ -48,11 +48,11 @@
           <div class="mb-3">
               <label>Description</label>
               <div class="input-group">
-                <input class="form-control"
+                <textarea class="form-control"
                 id="DescriptionId"
                 type="text"
                 placeholder="Description"
-                formControlName="productDescription"/>
+                formControlName="productDescription"> </textarea>
                   
               </div>
           </div>
