--- a/project/src/app/features/product-list/product-list.component.scss
+++ b/project/src/app/features/product-list/product-list.component.scss
@@ -66,7 +66,7 @@ table {
 
 	tfoot {
 		td {
-			padding: 0.35em 0 .35em;
+			padding: 0 .35em 0 .35em;
 
 			text-align: left;
 			@include heading-font-regular;
@@ -100,16 +100,13 @@ table {
 ///RWD MIXIN BELOW
 @mixin rwd-first {
 	display: block;
-  
-
   tbody {
     border: none;
   }
-		tbody, th, td, tr, tfoot {
+  tbody, th, td, tr, tfoot {
 			display: block; 
 		}
-
-		thead {
+  thead {
 			display: none;
 		}
 		tr {
@@ -122,16 +119,16 @@ table {
 			border-top: 5px solid $primary_1;
 
 			td {
-				padding: .5em .5em .5em 50%;
+				padding: 0% .5em .5em 50%;
 				float:left;
        		width: 100%;
 				&:before {
 					width: 100%;
 					display: block;
 					float: left;
-					padding: .5em .5em .5em 0;
+					padding: 0 .5em .5em 0;
 					clear: both;
-					margin: -.5em 0 0 -100%;
+					margin: 0 0 0 -100%;
 					@include heading-font-regular;
 					font-size: 1.125em;
 
@@ -139,16 +136,7 @@ table {
 			}
 		}
 
-		tr:nth-of-type(even) {
-			//background: $primary_2;
-			td {
-				
-				&:before {
-					
-				}
-			}
-		}
-}
+	}
 
 @mixin rwd-second {
 	display: table;
@@ -170,7 +158,7 @@ table {
 		box-shadow: none;
 
 		td {
-			padding: .75em 0 0.75em .25em;
+			padding: 0 0 0.75em .25em;
       float: none;
       width: auto;
 
