--- a/project/src/app/module/product-manage-form/product-manage-form.component.html
+++ b/project/src/app/module/product-manage-form/product-manage-form.component.html
@@ -58,6 +58,7 @@
           </div>
 
           <div class="mb-3">
+            <ng-container #confirmationDialogContainerRef></ng-container>
             <button  type="submit" class="btn btn-primary"
             [disabled]="!productForm.valid">Save</button>
           </div>
