--- a/project/src/app/shared/modals/confirmation-dialog/confirmation-dialog.component.html
+++ b/project/src/app/shared/modals/confirmation-dialog/confirmation-dialog.component.html
@@ -1,4 +1,8 @@
-<div class="modal-header">
+
+<ng-template #confirmationDialog let-modal>
+
+<div class="modal-header" >
+    
     <h4 class="modal-title">{{ title }}</h4>
     <button type="button"class="close" aria-label="Close" (click)="dismiss()">
     <span aria-hidden=”true”>&times;</span>
@@ -11,3 +15,4 @@
     <button type="button" class="btn btn-danger" (click)="decline()">{{ btnCancelText }}</button>
     <button type="button" class="btn btn-primary" (click)="accept()">{{ btnOkText }}</button>
     </div>
+</ng-template>
