--- a/project/src/app/features/product-details/product-details.component.html
+++ b/project/src/app/features/product-details/product-details.component.html
@@ -11,29 +11,29 @@
   
         <div class="col-md-8">
           <div class="row">
-            <div class="col-md-3">Name:</div>
+            <div class="col-md-3">{{constant.Name}}:</div>
             <div class="col-md-6">{{product.productName}}</div>
           </div>
           <div class="row">
-            <div class="col-md-3">Code:</div>
+            <div class="col-md-3">{{constant.Code}}:</div>
             <div class="col-md-6">{{product.productCode}}</div>
           </div>
           <div class="row">
-            <div class="col-md-3">Description:</div>
+            <div class="col-md-3">{{constant.Description}}:</div>
             <div class="col-md-6">{{product.description}}</div>
           </div>
           <div class="row">
-            <div class="col-md-3">Availability:</div>
+            <div class="col-md-3">{{constant.Availability}}:</div>
             <div class="col-md-6">{{product.releaseDate}}</div>
           </div>
           <div class="row">
-            <div class="col-md-3">Price:</div>
+            <div class="col-md-3">{{constant.Price}}:</div>
             <div class="col-md-6">{{product.price|currency:"USD":"symbol"}}</div>
           </div>
          
           </div>
           <div class="row">
-            <div class="col-md-3">Tags:</div>
+            <div class="col-md-3">{{constant.Tags}}:</div>
             <div class="col-md-6">{{product.tags}}</div>
           </div>
         </div>
